tests/security/taintPropertyPassingObject/output.txt
ERROR: TaintedData - input.hack:16:22 - Detected tainted SQL